# openapi/sample.yaml
@@ -166,7 +166,6 @@ components:
     User:
       title: User
       type: object
-      description: ''
       examples:
         - id: 142
           firstName: Alice
@@ -197,9 +196,18 @@ components:
           type: string
           format: date
           description: The date that the user was created.
+        referralCount:
+          type: number
+          x-stoplight:
+            id: ctfy6h643qmgp
+        preferredWorkLocation:
+          type: string
+          x-stoplight:
+            id: l06bpoyyizpyz
       required:
         - id
         - firstName
         - lastName
         - email
         - emailVerified
+        - referralCount
